Tests/CompilerTests/negative/missing-argument.hylo
//! no-std

fun f(x: Void = (), y: Void) {}

fun main() {
  f(x: (), y: ())
  f(y: ())
  f()
}
