Tests/CompilerTests/negative/missing-argument.expected
negative/missing-argument.hylo:8.3-6: error: incompatible labels: found '()', expected '(x:y:)'
  f()
  ~~~
